@@ -12,7 +12,7 @@
  *******************************************************************************/
 
 import { Selection, useSelection } from '@eclipse-sirius/sirius-components-core';
-import React, { useCallback, useContext, useEffect, useMemo, useRef } from 'react';
+import React, { useCallback, useContext, useEffect, useMemo, useRef, MouseEvent as ReactMouseEvent } from 'react';
 import {
   Background,
   BackgroundVariant,
@@ -187,10 +187,6 @@ export const DiagramRenderer = ({ diagramRefreshedEventPayload }: DiagramRendere
           transformedNodeChanges = transformResizeListNodeChanges(transformedNodeChanges);
           transformedNodeChanges = applyHelperLines(transformedNodeChanges);
 
-          if (transformedNodeChanges.some((change) => change.type === 'position')) {
-            closeAllPalettes();
-          }
-
           let newNodes = applyNodeChanges(transformedNodeChanges, oldNodes);
 
           newNodes = applyMoveChange(transformedNodeChanges, newNodes);
@@ -283,6 +279,14 @@ export const DiagramRenderer = ({ diagramRefreshedEventPayload }: DiagramRendere
 
   const { onNodeMouseEnter, onNodeMouseLeave } = useNodeHover();
 
+  const handleNodeDrag = useCallback(
+    (event: ReactMouseEvent, node: Node, nodes: Node[]) => {
+      onNodeDrag(event, node, nodes);
+      closeAllPalettes();
+    },
+    [onNodeDrag, closeAllPalettes]
+  );
+
   return (
     <ReactFlow
       nodes={nodes}
@@ -305,7 +309,7 @@ export const DiagramRenderer = ({ diagramRefreshedEventPayload }: DiagramRendere
       nodeDragThreshold={1}
       onDrop={onDrop}
       onDragOver={onDragOver}
-      onNodeDrag={onNodeDrag}
+      onNodeDrag={handleNodeDrag}
       onNodeDragStart={onNodeDragStart}
       onNodeDragStop={handleNodeDragStop}
       onNodeMouseEnter={onNodeMouseEnter}
